--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,3 @@
-
 /* Deprecated vars */
 @borderLight: #CCC;
 @borderDark: #666;
@@ -8,23 +7,23 @@
 /* ----------------------------------------- */
 
 @font-face {
-  font-family: 'Modesto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../../fonts/modesto-condensed/modesto-condensed.woff2') format('woff2');
+    font-family: 'Modesto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../fonts/modesto-condensed/modesto-condensed.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Modesto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../../fonts/modesto-condensed/modesto-condensed-bold.woff2') format('woff2');
+    font-family: 'Modesto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../../fonts/modesto-condensed/modesto-condensed-bold.woff2') format('woff2');
 }
 
 .modesto {
-  font-family: "Modesto Condensed", "Palatino Linotype", serif;
-  font-size: 20px;
-  font-weight: 700;
+    font-family: "Modesto Condensed", "Palatino Linotype", serif;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 /* ----------------------------------------- */
@@ -45,32 +44,54 @@
 /* ----------------------------------------- */
 
 .flexrow {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 
-  > * {
-    flex: 1;
-  }
+    > * {
+        flex: 1;
+    }
 
-  .flex1 { flex: 1; }
-  .flex2 { flex: 2; }
-  .flex3 { flex: 3; }
-  .flex4 { flex: 4; }
+    .flex1 {
+        flex: 1;
+    }
+
+    .flex2 {
+        flex: 2;
+    }
+
+    .flex3 {
+        flex: 3;
+    }
+
+    .flex4 {
+        flex: 4;
+    }
 }
 
 .flexcol {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 
-  > * {
-    flex: 1;
-  }
+    > * {
+        flex: 1;
+    }
 
-  .flex1 { flex: 1; }
-  .flex2 { flex: 2; }
-  .flex3 { flex: 3; }
-  .flex4 { flex: 4; }
+    .flex1 {
+        flex: 1;
+    }
+
+    .flex2 {
+        flex: 2;
+    }
+
+    .flex3 {
+        flex: 3;
+    }
+
+    .flex4 {
+        flex: 4;
+    }
 }
