--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -19,7 +19,8 @@
 
                 {{#unless disableExperience}}
                 <div class="experience flexrow">
-                    <input name="data.details.xp.value" type="text" value="{{data.details.xp.value}}" placeholder="0" data-dtype="Number"/>
+                    <input name="data.details.xp.value" type="text" value="{{data.details.xp.value}}" placeholder="0"
+                           data-dtype="Number"/>
                     <span class="sep">/</span>
                     <span class="max">{{data.details.xp.max}}</span>
                 </div>
@@ -32,13 +33,16 @@
             {{!-- Character Summary --}}
             <ul class="summary flexrow">
                 <li>
-                    <input type="text" name="data.details.race" value="{{data.details.race}}" placeholder="{{ localize 'DND5E.Race' }}"/>
+                    <input type="text" name="data.details.race" value="{{data.details.race}}"
+                           placeholder="{{ localize 'DND5E.Race' }}"/>
                 </li>
                 <li>
-                    <input type="text" name="data.details.background" value="{{data.details.background}}" placeholder="{{ localize 'DND5E.Background' }}"/>
+                    <input type="text" name="data.details.background" value="{{data.details.background}}"
+                           placeholder="{{ localize 'DND5E.Background' }}"/>
                 </li>
                 <li>
-                    <input type="text" name="data.details.alignment" value="{{data.details.alignment}}" placeholder="{{ localize 'DND5E.Alignment' }}"/>
+                    <input type="text" name="data.details.alignment" value="{{data.details.alignment}}"
+                           placeholder="{{ localize 'DND5E.Alignment' }}"/>
                 </li>
                 <li class="proficiency">
                     <span>{{ localize "DND5E.Proficiency" }} {{numberFormat data.attributes.prof decimals=0 sign=true}}</span>
@@ -50,14 +54,18 @@
                 <li class="attribute health">
                     <h4 class="attribute-name box-title">{{ localize "DND5E.HitPoints" }}</h4>
                     <div class="attribute-value multiple">
-                        <input name="data.attributes.hp.value" type="text" value="{{data.attributes.hp.value}}" placeholder="10" data-dtype="Number"/>
+                        <input name="data.attributes.hp.value" type="text" value="{{data.attributes.hp.value}}"
+                               placeholder="10" data-dtype="Number"/>
                         <span class="sep"> / </span>
-                        <input name="data.attributes.hp.max" type="text" value="{{data.attributes.hp.max}}" placeholder="10" data-dtype="Number"/>
+                        <input name="data.attributes.hp.max" type="text" value="{{data.attributes.hp.max}}"
+                               placeholder="10" data-dtype="Number"/>
                     </div>
                     <footer class="attribute-footer">
-                        <input name="data.attributes.hp.temp" type="text" class="temphp" placeholder="+{{ localize 'DND5E.Temp' }}"
+                        <input name="data.attributes.hp.temp" type="text" class="temphp"
+                               placeholder="+{{ localize 'DND5E.Temp' }}"
                                value="{{data.attributes.hp.temp}}" data-dtype="Number"/>
-                        <input name="data.attributes.hp.tempmax" type="text" class="temphp" placeholder="+{{ localize 'DND5E.Max' }}"
+                        <input name="data.attributes.hp.tempmax" type="text" class="temphp"
+                               placeholder="+{{ localize 'DND5E.Max' }}"
                                value="{{data.attributes.hp.tempmax}}" data-dtype="Number"/>
                     </footer>
                 </li>
@@ -65,10 +73,12 @@
                 <li class="attribute hit-dice">
                     <h4 class="attribute-name box-title">
                         {{ localize "DND5E.HitDice" }}
-                        <a class="config-button" data-action="hit-dice" title="{{localize 'DND5E.HitDiceConfig'}}"><i class="fas fa-cog"></i></a>
+                        <a class="config-button" data-action="hit-dice" title="{{localize 'DND5E.HitDiceConfig'}}"><i
+                                class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value multiple">
-                        <label class="hit-dice">{{data.attributes.hd}} <span class="sep"> / </span> {{data.details.level}}</label>
+                        <label class="hit-dice">{{data.attributes.hd}} <span class="sep"> / </span>
+                            {{data.details.level}}</label>
                     </div>
                     <footer class="attribute-footer">
                         <a class="rest short-rest">{{ localize "DND5E.RestS" }}</a>
@@ -79,7 +89,8 @@
                 <li class="attribute armor">
                     <h4 class="attribute-name box-title">
                         {{ localize "DND5E.ArmorClass" }}
-                        <a class="config-button" data-action="armor" title="{{localize 'DND5E.ArmorConfig'}}"><i class="fas fa-cog"></i></a>
+                        <a class="config-button" data-action="armor" title="{{localize 'DND5E.ArmorConfig'}}"><i
+                                class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value attributable" data-property="attributes.ac">
                         <span>{{data.attributes.ac.value}}</span>
@@ -92,7 +103,8 @@
                 <li class="attribute movement">
                     <h4 class="attribute-name box-title">
                         {{ localize "DND5E.Movement" }}
-                        <a class="config-button" data-action="movement" title="{{localize 'DND5E.MovementConfig'}}"><i class="fas fa-cog"></i></a>
+                        <a class="config-button" data-action="movement" title="{{localize 'DND5E.MovementConfig'}}"><i
+                                class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value">
                         <span>{{movement.primary}}</span>
@@ -103,7 +115,8 @@
                 </li>
 
                 <li class="attribute initiative">
-                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">{{ localize "DND5E.Initiative" }}</h4>
+                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">{{ localize
+                        "DND5E.Initiative" }}</h4>
                     <div class="attribute-value">
                         <span>{{numberFormat data.attributes.init.total decimals=0 sign=true}}</span>
                     </div>
@@ -134,34 +147,37 @@
 
             {{!-- Ability Scores --}}
             <ul class="ability-scores flexrow">
-            {{#each data.abilities as |ability id|}}
+                {{#each data.abilities as |ability id|}}
                 <li class="ability {{#if ability.proficient}}proficient{{/if}}" data-ability="{{id}}">
                     <h4 class="ability-name box-title rollable">{{ability.label}}</h4>
-                    <input class="ability-score" name="data.abilities.{{id}}.value" type="number" value="{{ability.value}}" placeholder="10"/>
+                    <input class="ability-score" name="data.abilities.{{id}}.value" type="number"
+                           value="{{ability.value}}" placeholder="10"/>
                     <div class="ability-modifiers flexrow">
                         <span class="ability-mod" title="{{ localize 'DND5E.Modifier' }}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
-                        <input type="hidden" name="data.abilities.{{id}}.proficient" value="{{ability.baseProf}}" data-dtype="Number"/>
+                        <input type="hidden" name="data.abilities.{{id}}.proficient" value="{{ability.baseProf}}"
+                               data-dtype="Number"/>
                         <a class="proficiency-toggle ability-proficiency" title="{{ localize 'DND5E.Proficiency' }}">{{{ability.icon}}}</a>
                         <span class="ability-save" title="{{ localize 'DND5E.SavingThrow' }}">{{numberFormat ability.save decimals=0 sign=true}}</span>
                     </div>
                 </li>
-            {{/each}}
+                {{/each}}
             </ul>
 
             {{!-- Skills --}}
             <ul class="skills-list">
-            {{#each config.skills as |label s|}}
-            {{#with (lookup ../data.skills s) as |skill|}}
+                {{#each config.skills as |label s|}}
+                {{#with (lookup ../data.skills s) as |skill|}}
                 <li class="skill flexrow {{#if skill.value}}proficient{{/if}}" data-skill="{{s}}">
-                    <input type="hidden" name="data.skills.{{s}}.value" value="{{skill.baseValue}}" data-dtype="Number"/>
+                    <input type="hidden" name="data.skills.{{s}}.value" value="{{skill.baseValue}}"
+                           data-dtype="Number"/>
                     <a class="proficiency-toggle skill-proficiency" title="{{skill.hover}}">{{{skill.icon}}}</a>
                     <h4 class="skill-name rollable">{{label}}</h4>
                     <span class="skill-ability">{{skill.ability}}</span>
                     <span class="skill-mod">{{numberFormat skill.total decimals=0 sign=true}}</span>
                     <span class="skill-passive">({{skill.passive}})</span>
                 </li>
-            {{/with}}
-            {{/each}}
+                {{/with}}
+                {{/each}}
             </ul>
 
             <section class="center-pane flexcol">
@@ -172,19 +188,23 @@
                     <li class="attribute resource">
                         <h4 class="attribute-name box-title">
                             <input name="data.resources.{{res.name}}.label" type="text" value="{{res.label}}"
-                                   placeholder="{{res.placeholder}}" />
+                                   placeholder="{{res.placeholder}}"/>
                         </h4>
                         <div class="attribute-value">
                             <label class="recharge checkbox flexcol">
-                                <span>{{ localize "DND5E.AbbreviationSR" }}</span><input name="data.resources.{{res.name}}.sr" type="checkbox" {{checked res.sr}}/>
+                                <span>{{ localize "DND5E.AbbreviationSR" }}</span><input
+                                    name="data.resources.{{res.name}}.sr" type="checkbox" {{checked res.sr}}/>
                             </label>
 
-                            <input name="data.resources.{{res.name}}.value" type="number" value="{{res.value}}" placeholder="0"/>
+                            <input name="data.resources.{{res.name}}.value" type="number" value="{{res.value}}"
+                                   placeholder="0"/>
                             <span class="sep"> / </span>
-                            <input name="data.resources.{{res.name}}.max" type="number" value="{{res.max}}" placeholder="0"/>
+                            <input name="data.resources.{{res.name}}.max" type="number" value="{{res.max}}"
+                                   placeholder="0"/>
 
                             <label class="recharge checkbox flexcol">
-                                <span>{{ localize "DND5E.AbbreviationLR" }}</span><input name="data.resources.{{res.name}}.lr" type="checkbox" {{checked res.lr}}/>
+                                <span>{{ localize "DND5E.AbbreviationLR" }}</span><input
+                                    name="data.resources.{{res.name}}.lr" type="checkbox" {{checked res.lr}}/>
                             </label>
                         </div>
                     </li>
@@ -208,7 +228,7 @@
                         <h4>{{ localize "DND5E.Exhaustion" }}</h4>
                         <div class="counter-value">
                             <input name="data.attributes.exhaustion" type="number" placeholder="0"
-                                   value="{{data.attributes.exhaustion}}" />
+                                   value="{{data.attributes.exhaustion}}"/>
                         </div>
                     </div>
                     <div class="counter flexrow inspiration">
@@ -260,7 +280,8 @@
                 <textarea name="data.details.flaw">{{data.details.flaw}}</textarea>
             </div>
             <div class="biography">
-                {{editor content=data.details.biography.value target="data.details.biography.value" button=true owner=owner editable=editable rollData=rollData}}
+                {{editor content=data.details.biography.value target="data.details.biography.value" button=true
+                owner=owner editable=editable rollData=rollData}}
             </div>
         </div>
     </section>
