--- a/templates/actors/parts/actor-features.html
+++ b/templates/actors/parts/actor-features.html
@@ -9,7 +9,7 @@
 {{/unless}}
 
 <ol class="items-list inventory-list">
-{{#each sections as |section sid|}}
+    {{#each sections as |section sid|}}
     <li class="items-header flexrow">
         <h3 class="item-name flexrow">{{localize section.label}}</h3>
 
@@ -19,28 +19,30 @@
         {{/if}}
 
         {{#if section.columns}}
-            {{#each section.columns}}
-                <div class="item-detail {{css}}">{{label}}</div>
-            {{/each}}
+        {{#each section.columns}}
+        <div class="item-detail {{css}}">{{label}}</div>
+        {{/each}}
         {{/if}}
 
         {{#if ../owner}}
         <div class="item-controls flexrow">
-            <a class="item-control item-create" title="{{localize 'DND5E.FeatureAdd'}}" {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"{{/each}}>
-                <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
+            <a class="item-control item-create" title="{{localize 'DND5E.FeatureAdd'}}" {{#each section.dataset as |v
+               k|}}data-{{k}}="{{v}}" {{/each}}>
+            <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
             </a>
         </div>
         {{/if}}
     </li>
 
     <ol class="item-list">
-    {{#each section.items as |item iid|}}
+        {{#each section.items as |item iid|}}
         <li class="item flexrow {{#if isDepleted}}depleted{{/if}}" data-item-id="{{item._id}}">
             <div class="item-name flexrow rollable">
                 <div class="item-image" style="background-image: url('{{item.img}}')"></div>
                 <h4>
                     {{item.name}}
-                    {{#if item.isOriginalClass}} <i class="original-class fas fa-sun" title="{{localize 'DND5E.ClassOriginal'}}"></i>{{/if}}
+                    {{#if item.isOriginalClass}} <i class="original-class fas fa-sun"
+                                                    title="{{localize 'DND5E.ClassOriginal'}}"></i>{{/if}}
                 </h4>
             </div>
 
@@ -71,18 +73,18 @@
             {{/if}}
 
             {{#if section.columns}}
-                {{#each section.columns}}
-                    <div class="item-detail {{css}}">
-                        {{#with (getProperty item property)}}
-                            {{#if ../editable}}
-                                <input type="text" value="{{this}}" placeholder="&mdash;"
-                                       data-dtype="{{../editable}}">
-                            {{else}}
-                                {{this}}
-                            {{/if}}
-                        {{/with}}
-                    </div>
-                {{/each}}
+            {{#each section.columns}}
+            <div class="item-detail {{css}}">
+                {{#with (getProperty item property)}}
+                {{#if ../editable}}
+                <input type="text" value="{{this}}" placeholder="&mdash;"
+                       data-dtype="{{../editable}}">
+                {{else}}
+                {{this}}
+                {{/if}}
+                {{/with}}
+            </div>
+            {{/each}}
             {{/if}}
 
             {{#if ../../owner}}
@@ -98,7 +100,7 @@
             </div>
             {{/if}}
         </li>
-    {{/each}}
+        {{/each}}
     </ol>
-{{/each}}
+    {{/each}}
 </ol>
