--- a/templates/actors/parts/actor-inventory.html
+++ b/templates/actors/parts/actor-inventory.html
@@ -3,7 +3,8 @@
     <ol class="currency flexrow">
         <h3>
             {{localize "DND5E.Currency"}}
-            <a class="currency-convert rollable" data-action="convertCurrency" title="{{localize 'DND5E.CurrencyConvert'}}">
+            <a class="currency-convert rollable" data-action="convertCurrency"
+               title="{{localize 'DND5E.CurrencyConvert'}}">
                 <i class="fas fa-coins"></i>
             </a>
         </h3>
@@ -25,35 +26,35 @@
 </div>
 
 <ol class="items-list inventory-list">
-{{#each sections as |section sid|}}
+    {{#each sections as |section sid|}}
     <li class="items-header flexrow">
         <h3 class="item-name flexrow">{{localize section.label}}</h3>
 
         {{#if section.columns}}
-            {{#each section.columns}}
-                <div class="item-detail {{css}}">{{label}}</div>
-            {{/each}}
+        {{#each section.columns}}
+        <div class="item-detail {{css}}">{{label}}</div>
+        {{/each}}
         {{else}}
-            {{#if ../isCharacter}}
-                <div class="item-detail item-weight">{{localize "DND5E.Weight"}}</div>
-            {{/if}}
+        {{#if ../isCharacter}}
+        <div class="item-detail item-weight">{{localize "DND5E.Weight"}}</div>
+        {{/if}}
 
-            <div class="item-detail item-uses">{{localize "DND5E.Charges"}}</div>
-            <div class="item-detail item-action">{{localize "DND5E.Usage"}}</div>
+        <div class="item-detail item-uses">{{localize "DND5E.Charges"}}</div>
+        <div class="item-detail item-action">{{localize "DND5E.Usage"}}</div>
         {{/if}}
 
         {{#if ../owner}}
         <div class="item-controls flexrow">
             <a class="item-control item-create" title='{{localize "DND5E.ItemCreate"}}'
-               {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"{{/each}}>
-                <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
+               {{#each section.dataset as |v k|}}data-{{k}}="{{v}}" {{/each}}>
+            <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
             </a>
         </div>
         {{/if}}
     </li>
 
     <ol class="item-list">
-    {{#each section.items as |item iid|}}
+        {{#each section.items as |item iid|}}
         <li class="item flexrow {{section.css}}"
             data-item-id="{{#if section.editableName}}{{iid}}{{else}}{{item._id}}{{/if}}">
             <div class="item-name flexrow rollable">
@@ -67,54 +68,56 @@
                 </h4>
                 {{#if item.attunement}}
                 <div class="item-detail attunement">
-                    <i class="fas {{item.attunement.icon}} {{item.attunement.cls}}" title="{{localize item.attunement.title}}"></i>
+                    <i class="fas {{item.attunement.icon}} {{item.attunement.cls}}"
+                       title="{{localize item.attunement.title}}"></i>
                 </div>
                 {{/if}}
                 {{/if}}
             </div>
 
             {{#if section.columns}}
-                {{#each section.columns}}
-                    <div class="item-detail {{css}}">
-                        {{#with (getProperty item property)}}
-                            {{#if ../editable}}
-                                <input type="text" value="{{this}}" placeholder="&mdash;"
-                                       data-dtype="{{../editable}}" data-property="{{../property}}">
-                            {{else}}
-                                {{this}}
-                            {{/if}}
-                        {{/with}}
-                    </div>
-                {{/each}}
+            {{#each section.columns}}
+            <div class="item-detail {{css}}">
+                {{#with (getProperty item property)}}
+                {{#if ../editable}}
+                <input type="text" value="{{this}}" placeholder="&mdash;"
+                       data-dtype="{{../editable}}" data-property="{{../property}}">
+                {{else}}
+                {{this}}
+                {{/if}}
+                {{/with}}
+            </div>
+            {{/each}}
             {{else}}
-                {{#if ../../isCharacter}}
-                <div class="item-detail item-weight">
-                    {{#if item.totalWeight}}
-                        <div class="item-detail">
-                            {{ item.totalWeight }} {{ @root.weightUnit }}
-                        </div>
-                    {{/if}}
+            {{#if ../../isCharacter}}
+            <div class="item-detail item-weight">
+                {{#if item.totalWeight}}
+                <div class="item-detail">
+                    {{ item.totalWeight }} {{ @root.weightUnit }}
                 </div>
                 {{/if}}
+            </div>
+            {{/if}}
 
-                <div class="item-detail item-uses">
-                    {{#if item.hasUses }}
-                        <input type="text" value="{{item.data.uses.value}}" placeholder="0"/>
-                        / {{item.data.uses.max}}
-                    {{/if}}
-                </div>
+            <div class="item-detail item-uses">
+                {{#if item.hasUses }}
+                <input type="text" value="{{item.data.uses.value}}" placeholder="0"/>
+                / {{item.data.uses.max}}
+                {{/if}}
+            </div>
 
-                <div class="item-detail item-action">
-                    {{#if item.data.activation.type }}
-                        {{item.labels.activation}}
-                    {{/if}}
-                </div>
+            <div class="item-detail item-action">
+                {{#if item.data.activation.type }}
+                {{item.labels.activation}}
+                {{/if}}
+            </div>
             {{/if}}
 
             {{#if ../../owner}}
             <div class="item-controls flexrow">
                 {{#unless @root.isVehicle}}
-                <a class="item-control item-toggle {{item.toggleClass}}" title='{{item.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
+                <a class="item-control item-toggle {{item.toggleClass}}" title='{{item.toggleTitle}}'><i
+                        class="fas fa-shield-alt"></i></a>
                 {{/unless}}
                 {{#unless section.editableName}}
                 <a class="item-control item-edit" title='{{localize "DND5E.ItemEdit"}}'><i class="fas fa-edit"></i></a>
@@ -123,9 +126,9 @@
             </div>
             {{/if}}
         </li>
-    {{/each}}
+        {{/each}}
     </ol>
-{{/each}}
+    {{/each}}
 </ol>
 
 
