--- a/templates/apps/ability-use.html
+++ b/templates/apps/ability-use.html
@@ -12,7 +12,8 @@
             <select name="level">
                 {{#select item.data.level}}
                 {{#each spellLevels as |l|}}
-                <option value="{{l.level}}" {{#unless l.canCast}}disabled{{/unless}}>{{l.label}}</option>
+                <option value="{{l.level}}" {{#unless l.canCast}}disabled{{
+                /unless}}>{{l.label}}</option>
                 {{/each}}
                 {{/select}}
             </select>
@@ -20,28 +21,32 @@
     </div>
 
     <div class="form-group">
-        <label class="checkbox"><input type="checkbox" name="consumeSlot" checked/>{{ localize "DND5E.SpellCastConsume" }}</label>
+        <label class="checkbox"><input type="checkbox" name="consumeSlot" checked/>{{ localize "DND5E.SpellCastConsume"
+            }}</label>
     </div>
     {{/if}}
 
     {{#if consumeUses}}
     <div class="form-group">
-        <label class="checkbox"><input type="checkbox" name="consumeUse" checked/>{{ localize "DND5E.AbilityUseConsume" }}</label>
+        <label class="checkbox"><input type="checkbox" name="consumeUse" checked/>{{ localize "DND5E.AbilityUseConsume"
+            }}</label>
     </div>
     {{/if}}
 
     {{#if consumeResource}}
     <div class="form-group">
-        <label class="checkbox"><input type="checkbox" name="consumeResource" checked/>{{ localize "DND5E.ConsumeResource" }}</label>
+        <label class="checkbox"><input type="checkbox" name="consumeResource" checked/>{{ localize
+            "DND5E.ConsumeResource" }}</label>
     </div>
     {{/if}}
 
     {{#if consumeRecharge}}
     <div class="form-group">
-        <label class="checkbox"><input type="checkbox" name="consumeRecharge" checked/>{{ localize "DND5E.ConsumeRecharge" }}</label>
+        <label class="checkbox"><input type="checkbox" name="consumeRecharge" checked/>{{ localize
+            "DND5E.ConsumeRecharge" }}</label>
     </div>
     {{/if}}
-    
+
     {{#if createTemplate}}
     <div class="form-group">
         <label class="checkbox">
