--- a/templates/apps/short-rest.html
+++ b/templates/apps/short-rest.html
@@ -10,8 +10,9 @@
                 {{/each}}
                 {{/select}}
             </select>
-            <button id="roll-hd" {{#unless canRoll}}disabled{{/unless}}>
-                <i class="fas fa-dice-d20"></i> {{ localize "DND5E.Roll" }}
+            <button id="roll-hd" {{#unless canRoll}}disabled{{
+            /unless}}>
+            <i class="fas fa-dice-d20"></i> {{ localize "DND5E.Roll" }}
             </button>
         </div>
         {{#unless canRoll}}
