--- a/templates/items/class.html
+++ b/templates/items/class.html
@@ -16,7 +16,8 @@
 
             <ul class="summary flexrow">
                 <li>
-                    <input type="text" name="data.source" value="{{data.source}}" placeholder="{{ localize 'DND5E.Source' }}"/>
+                    <input type="text" name="data.source" value="{{data.source}}"
+                           placeholder="{{ localize 'DND5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -33,7 +34,8 @@
 
         {{!-- Description Tab --}}
         <div class="tab flexrow active" data-group="primary" data-tab="description">
-            {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
+            {{editor content=data.description.value target="data.description.value" button=true owner=owner
+            editable=editable}}
         </div>
 
         {{!-- Details Tab --}}
@@ -72,7 +74,8 @@
             <div class="form-group">
                 <label>{{localize "DND5E.HitDiceUsed"}}</label>
                 <div class="form-fields">
-                    <input type="text" placeholder="0" name="data.hitDiceUsed" value="{{data.hitDiceUsed}}" data-dtype="Number"/>
+                    <input type="text" placeholder="0" name="data.hitDiceUsed" value="{{data.hitDiceUsed}}"
+                           data-dtype="Number"/>
                 </div>
             </div>
 
@@ -108,7 +111,7 @@
                 <div class="form-fields">
                     <ul class="traits-list">
                         {{#each data.saves}}
-                            <li class="tag {{this}}">{{lookup ../config.abilities this}}</li>
+                        <li class="tag {{this}}">{{lookup ../config.abilities this}}</li>
                         {{/each}}
                     </ul>
                 </div>
@@ -118,7 +121,8 @@
             <div class="form-group">
                 <label>{{localize "DND5E.ClassSkillsNumber"}}</label>
                 <div class="form-fields">
-                    <input type="text" placeholder="0" name="data.skills.number" value="{{data.skills.number}}" data-dtype="Number"/>
+                    <input type="text" placeholder="0" name="data.skills.number" value="{{data.skills.number}}"
+                           data-dtype="Number"/>
                 </div>
             </div>
 
@@ -126,7 +130,8 @@
                 <label>
                     {{localize "DND5E.ClassSkillsEligible"}}
                     {{#if editable }}
-                    <a class="trait-selector class-skills" data-target="data.skills.choices" data-options="skills.choices">
+                    <a class="trait-selector class-skills" data-target="data.skills.choices"
+                       data-options="skills.choices">
                         <i class="fas fa-edit"></i>
                     </a>
                     {{/if}}
@@ -152,7 +157,7 @@
                 <div class="form-fields">
                     <ul class="traits-list">
                         {{#each data.skills.value}}
-                            <li class="tag {{this}}">{{lookup ../config.skills this}}</li>
+                        <li class="tag {{this}}">{{lookup ../config.skills this}}</li>
                         {{/each}}
                     </ul>
                 </div>
