--- a/templates/items/feat.html
+++ b/templates/items/feat.html
@@ -19,10 +19,12 @@
                     {{labels.featType}}
                 </li>
                 <li>
-                    <input type="text" name="data.requirements" value="{{data.requirements}}" placeholder="{{ localize 'DND5E.Requirements' }}"/>
+                    <input type="text" name="data.requirements" value="{{data.requirements}}"
+                           placeholder="{{ localize 'DND5E.Requirements' }}"/>
                 </li>
                 <li>
-                    <input type="text" name="data.source" value="{{data.source}}" placeholder="{{ localize 'DND5E.Source' }}"/>
+                    <input type="text" name="data.source" value="{{data.source}}"
+                           placeholder="{{ localize 'DND5E.Source' }}"/>
                 </li>
             </ul>
         </div>
