--- a/templates/items/tool.html
+++ b/templates/items/tool.html
@@ -21,7 +21,8 @@
                     </select>
                 </li>
                 <li>
-                    <input type="text" name="data.source" value="{{data.source}}" placeholder="{{ localize 'DND5E.Source' }}"/>
+                    <input type="text" name="data.source" value="{{data.source}}"
+                           placeholder="{{ localize 'DND5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -53,9 +54,9 @@
             {{!-- Tool Proficiency --}}
             <div class="form-group">
                 <label>{{ localize "DND5E.ItemToolProficiency" }}</label>
-                 <select name="data.proficient" data-dtype="Number">
-                     {{selectOptions config.proficiencyLevels selected=data.proficient}}
-                 </select>
+                <select name="data.proficient" data-dtype="Number">
+                    {{selectOptions config.proficiencyLevels selected=data.proficient}}
+                </select>
             </div>
 
             {{!-- Ability Check --}}
